tests/ui/from/variant_multiple_fields.stderr
error: not expected here; the #[from] attribute belongs on a specific field
 --> tests/ui/from/variant_multiple_fields.rs:6:5
  |
6 |     #[from]
  |     ^^^^^^^
